add hover section second

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="#">Kodok Bangkong</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
@@ -45,8 +45,8 @@
           <div class="row text-center">
             <h1 class="header-up">Hello World!</h1>
             <div class="border">
-              <h2>Welcome to my Blog, Enjoy</h2>
-              <h2>We have so many good ideas</h2>
+              <h2 class="header-desc">Welcome to my Blog, Enjoy</h2>
+              <h2 class="header-desc">We have so many good ideas</h2>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
       <!-- section-first -->
       <div id="section-first">
         <div class="container">
-          <h1 class="text-center"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span>&nbsp;Skills&nbsp;<span class="glyphicon glyphicon-minus" aria-hidden="true"></span><div class="border-bottom"></div></h1>
+          <h1 class="text-center">&nbsp;Skills&nbsp;<div class="border-bottom"></div></h1>
           <div class="row trio text-center">
             <div class="col-md-4">
               <a href="#">
@@ -67,6 +67,7 @@
               </a>
               <h2 class="title-skill">Lorem Ipsum</h2>
               <h3 class="desc-skill text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis commodo elementum. Praesent malesuada, erat vitae luctus euismod, metus nibh vehicula neque, non suscipit ante leo lobortis eros. Mauris scelerisque luctus nunc, vitae molestie magna.</h3>
+              <hr>
             </div>
             <div class="col-md-4">
               <a href="#">
@@ -77,6 +78,7 @@
               </a>
               <h2 class="title-skill">Lorem Ipsum</h2>
               <h3 class="desc-skill text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis commodo elementum. Praesent malesuada, erat vitae luctus euismod, metus nibh vehicula neque, non suscipit ante leo lobortis eros. Mauris scelerisque luctus nunc, vitae molestie magna.</h3>
+              <hr>
             </div>
             <div class="col-md-4">
               <a href="#">
@@ -87,6 +89,7 @@
               </a>
               <h2 class="title-skill">Lorem Ipsum</h2>
               <h3 class="desc-skill text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis commodo elementum. Praesent malesuada, erat vitae luctus euismod, metus nibh vehicula neque, non suscipit ante leo lobortis eros. Mauris scelerisque luctus nunc, vitae molestie magna.</h3>
+              <hr>
             </div>
           </div>
         </div>
@@ -95,7 +98,56 @@
 
       <!-- section-second -->
       <div id="section-second">
-        
+        <div class="container">
+          <div class="row">
+            <div class="wrapper-circle2 absolute center-things wrapper-circle2-h">
+            </div>
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+            <div class="col-md-4">
+              <div class="wrapper-circle2">
+                <img src="img/section2_1.png">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+            <div class="col-md-4">
+              <div class="wrapper-circle2">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+            <div class="col-md-4">
+              <div class="wrapper-circle2">
+
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="section2-line"></div>
+              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- /section-second -->
     </body>
@@ -103,8 +155,11 @@
       <script src="bower_components/jquery/dist/jquery.min.js"></script>
       <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/parallax/parallax.min.js"></script>
+      <script src="js/greensock-js/src/minified/jquery.gsap.min.js"></script>
       <script src="js/greensock-js/src/minified/TweenMax.min.js"></script>
       <script src="js/greensock-js/src/minified/TweenLite.min.js"></script>
+      <script src="js/greensock-js/src/minified/TimelineMax.min.js"></script>
+      <script src="js/greensock-js/src/minified/TimelineLite.min.js"></script>
       <script src="js/scroll/js/jquery.scrollorama.js"></script>
       <script src="js/script.js"></script>
       <script type="text/javascript">
