--- a/index.html
+++ b/index.html
@@ -98,55 +98,20 @@
 
       <!-- section-second -->
       <div id="section-second">
+        <div class="second-parallax">
+          <div class="phone-wrapper">
+          <img class="phone-bg" width="400" src="img/iphone-putih.png" class="img img-responsive">
+            <img class="phone" width="400" src="img/iphone.png" class="img img-responsive">
+            <img class="thumb" src="img/thumb.png" class="img img-responsive">
+            <div class="wrapper-box">
+              
+            </div>
+            <h3 class="phone-header">BIODATA</h3>
+
+          </div>
+        </div>
         <div class="container">
-          <div class="row">
-            <div class="wrapper-circle2 absolute center-things wrapper-circle2-h">
-            </div>
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-            <div class="col-md-4">
-              <div class="wrapper-circle2">
-                <img src="img/section2_1.png">
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-            <div class="col-md-4">
-              <div class="wrapper-circle2">
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-            <div class="col-md-4">
-              <div class="wrapper-circle2">
-
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="section2-line"></div>
-              <p class="text-center section-2-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis</p>
-            </div>
-          </div>
+          
         </div>
       </div>
       <!-- /section-second -->
@@ -160,6 +125,7 @@
       <script src="js/greensock-js/src/minified/TweenLite.min.js"></script>
       <script src="js/greensock-js/src/minified/TimelineMax.min.js"></script>
       <script src="js/greensock-js/src/minified/TimelineLite.min.js"></script>
+      <script src="js/greensock-js/src/minified/SplitText.min.js"></script>
       <script src="js/scroll/js/jquery.scrollorama.js"></script>
       <script src="js/script.js"></script>
       <script type="text/javascript">
