--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
             <img class="phone" width="400" src="img/iphone.png" class="img img-responsive">
             <div class="screen-wrapper">
               <div class="screen-wrapper-abs">
-                <img class="phone-bg" width="400" src="img/iphone-putih.png" class="img img-responsive">
-                <img class="thumb" src="img/thumb.png" class="img img-responsive">
-                <div class="wrapper-box">
-                  
-                </div>
                 <h3 class="phone-header">BIODATA</h3>
+                <div class="wrapper-circle-phone">
+                  <img src="img/person.png">
+                </div>
+                <div class="line"></div>
               </div>
             </div>
           </div>  
