--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
           <h1 class="text-center">&nbsp;Skills&nbsp;<div class="border-bottom"></div></h1>
           <div class="row trio text-center">
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <a href="#">
                 <div class="wrapper-circle" data-skill="skill_1">
                   <img src="img/skill_1.png">
@@ -69,7 +69,7 @@
               <h3 class="desc-skill text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis commodo elementum. Praesent malesuada, erat vitae luctus euismod, metus nibh vehicula neque, non suscipit ante leo lobortis eros. Mauris scelerisque luctus nunc, vitae molestie magna.</h3>
               <hr>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <a href="#">
                 <div class="wrapper-circle" data-skill="skill_2">
                   <img src="img/skill_2.png">
@@ -80,7 +80,7 @@
               <h3 class="desc-skill text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum non enim ac consequat. Donec quis velit ut ligula dignissim efficitur. Proin venenatis neque venenatis cursus vestibulum. Phasellus suscipit diam ac nisi consequat rutrum. Curabitur faucibus scelerisque arcu, nec pharetra felis semper vitae. Integer sed consequat augue, quis mattis quam. Fusce ex felis, sagittis vel posuere at, varius in diam. Nunc venenatis commodo elementum. Praesent malesuada, erat vitae luctus euismod, metus nibh vehicula neque, non suscipit ante leo lobortis eros. Mauris scelerisque luctus nunc, vitae molestie magna.</h3>
               <hr>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <a href="#">
                 <div class="wrapper-circle" data-skill="skill_3">
                   <img src="img/skill_3.png">
@@ -102,18 +102,53 @@
           <div class="phone-wrapper">
             <img class="phone" width="400" src="img/iphone.png" class="img img-responsive">
             <div class="screen-wrapper">
-              <div class="screen-wrapper-abs">
+              <div id="screen-1" class="screen-wrapper-abs">
                 <h3 class="phone-header">BIODATA</h3>
                 <div class="wrapper-circle-phone">
                   <img src="img/person.png">
                 </div>
                 <div class="line"></div>
+                <div class="information">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <h5>Nama:</h5>
+                    </div>
+                    <div class="col-sm-8">
+                      <h5>Aditya Wiraha Hadi Saputra</h5>
+                    </div>
+                    <div class="col-sm-12 text-center line-div"></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <h5>Lahir:</h5>
+                    </div>
+                    <div class="col-sm-8">
+                      <h5>Jakarta, 04 Oktober 1995</h5>
+                    </div>
+                    <div class="col-sm-12 text-center line-div"></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <h5>Hobi:</h5>
+                    </div>
+                    <div class="col-sm-8">
+                      <h5>Ngelucu</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="paging text-center">
+                  <a href="#">
+                    <img src="img/arrow-r.png">
+                  </a>
+                </div>
               </div>
             </div>
           </div>  
         </div>
-        <div class="container">
+        <div id="section2-right">
           
+        </div>
+        <div class="container">
         </div>
       </div>
       <!-- /section-second -->
