before adding phone 2

--- a/index.html
+++ b/index.html
@@ -101,49 +101,61 @@
         <div class="second-parallax">
           <div class="phone-wrapper">
             <img class="phone" width="400" src="img/iphone.png" class="img img-responsive">
-            <div class="screen-wrapper">
-              <div id="screen-1" class="screen-wrapper-abs">
-                <h3 class="phone-header">BIODATA</h3>
-                <div class="wrapper-circle-phone">
-                  <img src="img/person.png">
+            <div class="screen-wrapper-parent">
+              <div class="screen-wrapper">
+                <div id="screen-1" class="screen-wrapper-abs">
+                  <h3 id="phone-header1" class="phone-header">BIODATA</h3>
+                  <div class="wrapper-circle-phone">
+                    <img src="img/person.png">
+                  </div>
+                  <div class="line"></div>
+                  <div class="information">
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <h5>Nama:</h5>
+                      </div>
+                      <div class="col-sm-8">
+                        <h5>Aditya Wiraha Hadi Saputra</h5>
+                      </div>
+                      <div class="col-sm-12 text-center line-div"></div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <h5>Lahir:</h5>
+                      </div>
+                      <div class="col-sm-8">
+                        <h5>Jakarta, 04 Oktober 1995</h5>
+                      </div>
+                      <div class="col-sm-12 text-center line-div"></div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <h5>Hobi:</h5>
+                      </div>
+                      <div class="col-sm-8">
+                        <h5>Ngelucu</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="paging text-center">
+                      <img id="to-screen2" src="img/arrow-r.png">
+                  </div>
                 </div>
-                <div class="line"></div>
-                <div class="information">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h5>Nama:</h5>
-                    </div>
-                    <div class="col-sm-8">
-                      <h5>Aditya Wiraha Hadi Saputra</h5>
-                    </div>
-                    <div class="col-sm-12 text-center line-div"></div>
+
+                <div id="screen-2" class="screen-wrapper-abs">
+                  <h3 id="phone-header2" class="phone-header">BIODATA</h3>
+                  <div class="wrapper-circle-phone">
+                    <img src="img/person.png">
                   </div>
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h5>Lahir:</h5>
-                    </div>
-                    <div class="col-sm-8">
-                      <h5>Jakarta, 04 Oktober 1995</h5>
-                    </div>
-                    <div class="col-sm-12 text-center line-div"></div>
+                  <div class="line"></div>
+                  
+                  <div class="paging text-center">
+                      <img id="to-screen2" src="img/arrow-r.png">
                   </div>
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h5>Hobi:</h5>
-                    </div>
-                    <div class="col-sm-8">
-                      <h5>Ngelucu</h5>
-                    </div>
-                  </div>
-                </div>
-                <div class="paging text-center">
-                  <a href="#">
-                    <img src="img/arrow-r.png">
-                  </a>
                 </div>
               </div>
-            </div>
-          </div>  
+            </div>  
+          </div>
         </div>
         <div id="section2-right">
           
