adding page 2 in phone

--- a/index.html
+++ b/index.html
@@ -111,46 +111,50 @@
                   <div class="line"></div>
                   <div class="information">
                     <div class="row">
-                      <div class="col-sm-4">
+                      <div class="col-xs-4">
                         <h5>Nama:</h5>
                       </div>
-                      <div class="col-sm-8">
+                      <div class="col-xs-8">
                         <h5>Aditya Wiraha Hadi Saputra</h5>
                       </div>
                       <div class="col-sm-12 text-center line-div"></div>
                     </div>
                     <div class="row">
-                      <div class="col-sm-4">
+                      <div class="col-xs-4">
                         <h5>Lahir:</h5>
                       </div>
-                      <div class="col-sm-8">
+                      <div class="col-xs-8">
                         <h5>Jakarta, 04 Oktober 1995</h5>
                       </div>
-                      <div class="col-sm-12 text-center line-div"></div>
+                      <div class="col-xs-12 text-center line-div"></div>
                     </div>
                     <div class="row">
-                      <div class="col-sm-4">
+                      <div class="col-xs-4">
                         <h5>Hobi:</h5>
                       </div>
-                      <div class="col-sm-8">
+                      <div class="col-xs-8">
                         <h5>Ngelucu</h5>
                       </div>
                     </div>
                   </div>
                   <div class="paging text-center">
-                      <img id="to-screen2" src="img/arrow-r.png">
+                      <img class="arrow-r" src="img/arrow-r.png">
                   </div>
                 </div>
 
                 <div id="screen-2" class="screen-wrapper-abs">
-                  <h3 id="phone-header2" class="phone-header">BIODATA</h3>
-                  <div class="wrapper-circle-phone">
-                    <img src="img/person.png">
+                  <h3 id="phone-header2" class="phone-header">Pengalaman Kerja</h3>
+                  <div class="line2"></div>
+                  <div class="information2">
+                    <div class="row">
+                      
+                    </div>
                   </div>
-                  <div class="line"></div>
-                  
+
+
                   <div class="paging text-center">
-                      <img id="to-screen2" src="img/arrow-r.png">
+                      <img class="arrow-l" src="img/arrow-l.png">
+                      <img class="arrow-r" src="img/arrow-r.png">
                   </div>
                 </div>
               </div>
